SERVER-17198 prevent invalid logOp rollback in findAndModify