src/mongo/db/ops/parsed_update.cpp
@@ -42,6 +42,10 @@ namespace mongo {
         _canonicalQuery() { }
 
     Status ParsedUpdate::parseRequest() {
+        // It is invalid to request that the update plan stores a copy of the resulting document
+        // if it is a multi-update.
+        invariant(!(_request->shouldStoreResultDoc() && _request->isMulti()));
+
         // We parse the update portion before the query portion because the dispostion of the update
         // may determine whether or not we need to produce a CanonicalQuery at all.  For example, if
         // the update involves the positional-dollar operator, we must have a CanonicalQuery even if
