src/mongo/db/ops/update_request.h
@@ -53,6 +53,7 @@ namespace mongo {
             , _fromReplication(false)
             , _lifecycle(NULL)
             , _isExplain(false)
+            , _storeResultDoc(false)
             , _yieldPolicy(PlanExecutor::YIELD_MANUAL) {}
 
         const NamespaceString& getNamespaceString() const {
@@ -142,6 +143,14 @@ namespace mongo {
             return _isExplain;
         }
 
+        inline void setStoreResultDoc(bool value = true) {
+            _storeResultDoc = value;
+        }
+
+        inline bool shouldStoreResultDoc() const {
+            return _storeResultDoc;
+        }
+
         inline void setYieldPolicy(PlanExecutor::YieldPolicy yieldPolicy) {
             _yieldPolicy = yieldPolicy;
         }
@@ -198,6 +207,14 @@ namespace mongo {
 
         // Whether or not we are requesting an explained update. Explained updates are read-only.
         bool _isExplain;
+
+        // Whether or not we keep an owned copy of the resulting document for a non-multi update.
+        // This allows someone executing an update to retrieve the resulting document without
+        // another query once the update is complete.
+        //
+        // It is illegal to use this flag in combination with the '_multi' flag, and doing so will
+        // trigger an invariant check.
+        bool _storeResultDoc;
 
         // Whether or not the update should yield. Defaults to YIELD_MANUAL.
         PlanExecutor::YieldPolicy _yieldPolicy;
