src/mongo/db/storage/in_memory/in_memory_record_store.cpp
@@ -329,7 +329,14 @@ namespace mongo {
     }
 
     bool InMemoryRecordStore::updateWithDamagesSupported() const {
-        return true;
+        // TODO: Currently the UpdateStage assumes that updateWithDamages will apply the
+        // damages directly to the unowned BSONObj containing the record to be modified.
+        // The implementation of updateWithDamages() below copies the old record to a
+        // a new one and then applies the damages.
+        //
+        // We should be able to enable updateWithDamages() here once this assumption is
+        // relaxed.
+        return false;
     }
 
     Status InMemoryRecordStore::updateWithDamages( OperationContext* txn,
